# py-database

./: main.py  pyproject.toml  setup.py  test.db
databasepy/: __init__.py  main.db  server.py  test.db  user.geoloup.db
py_database/: server.py  user.geoloup.db
py_database_gilaxy04.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pydatabase/: README.md  requirment
pydatabase_gilaxy04.egg-info/: PKG-INFO  SOURCES.txt
