[project]
name = "py-database_gilaxy04"
version = "0.0.1"
authors = [
  { name="geoloupo team", email="franckiebbb@gmail.com" },
]
description = "database in python made simple"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/franck403/py-database"
"Bug Tracker" = "https://github.com/franck403/py-database/issues"
